--- a/Proyecto_Pinia/votacionsVue/package.json
+++ b/Proyecto_Pinia/votacionsVue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-vue-node",
+  "name": "votacionsvue",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "pinia": "^2.1.7",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.41.1",
     "socket.io": "^4.7.2",
