--- a/vue/game/package.json
+++ b/vue/game/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "node": "^21.2.0",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
