--- a/vue/game/src/back/package.json
+++ b/vue/game/src/back/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "vuex": "^4.1.0"
   }
 }
