--- a/vue/game/src/back/package.json
+++ b/vue/game/src/back/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "router": "^1.3.8",
     "socket.io": "^4.7.2",
+    "vue": "^3.3.11",
     "vuex": "^4.1.0"
   }
 }
